Restructure code - Support fetcher by entity - Bump to version 1.0.0-rc.12

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "odl-graphql-client",
   "repository": {
-    "url": "https://github.com/hieutran3010/odl-graphql-client",
+    "url": "git+https://github.com/hieutran3010/odl-graphql-client",
     "type": "git"
   },
-  "version": "1.0.0-rc.4",
+  "version": "1.0.0-rc.12",
   "dependencies": {
-    "graphql-request": "^1.8.2"
+    "graphql-request": "^1.8.2",
+    "lodash": "^4.17.15"
   }
 }
