--- a/package.json
+++ b/package.json
@@ -1,12 +1,42 @@
 {
   "name": "graphql-door-client",
+  "author": {
+    "email": "trantrunghieu3010@gmail.com",
+    "name": "Hieu Tran"
+  },
   "repository": {
     "url": "git+https://github.com/hieutran3010/graphql-door-client",
     "type": "git"
   },
-  "version": "1.0.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "keywords": [
+    "GraphQL",
+    "GraphQL Door"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
+  },
+  "version": "1.1.1",
   "dependencies": {
     "graphql-request": "1.8.2",
     "lodash": "^4.17.15"
-  }
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.152",
+    "prettier": "^2.0.5",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.3"
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
