--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "types": "lib/index.d.ts",
   "keywords": [
     "GraphQL",
-    "GraphQL Door"
+    "GraphQL Door",
+    "GraphQL Client"
   ],
   "scripts": {
     "build": "tsc",
@@ -24,7 +25,7 @@
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
-  "version": "1.1.1",
+  "version": "1.1.2",
   "dependencies": {
     "graphql-request": "1.8.2",
     "lodash": "^4.17.15"
