--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/hieutran3010/graphql-door-client",
     "type": "git"
   },
+  "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "keywords": [
@@ -25,13 +26,14 @@
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
-  "version": "1.1.4",
+  "version": "1.1.9",
   "dependencies": {
     "graphql-request": "1.8.2",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.152",
+    "jest": "^26.1.0",
     "prettier": "^2.0.5",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
